Add in AddThis buttons

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 				June 30, 2014
 			</div>
 		</div>
-
+		
+		<!-- social buttons -->
+		<div class="addthis_sharing_toolbox"></div>
+		
 		<!-- begin text -->
 		<div class="bat_story">
 			<p>You wanna know how I got them? So I had a wife. She was beautiful, like you, who tells me I worry too much, who tells me I ought to smile more, who gambles and gets in deep with the sharks. Hey. One day they carve her face. And we have no money for surgeries. She can't take it. I just wanna see her smile again. I just want her to know that I don't care about the scars. So, I do this to myself. And you know what? She can't stand the sight of me. She leaves. Now I see the funny side. Now I'm always smiling.</p>
@@ -394,6 +397,8 @@
 	<script type="text/javascript">
 		var s = skrollr.init();
 	</script>
+	
+	<script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=registerguard"></script>
 	
 </body>
 </html>
