--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 		
-		<!-- social buttons -->
+		<!-- Addthis social buttons -->
 		<div class="addthis_sharing_toolbox"></div>
 		
 		<!-- begin text -->
@@ -398,6 +398,7 @@
 		var s = skrollr.init();
 	</script>
 	
+	<!-- Addthis script -->
 	<script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=registerguard"></script>
 	
 </body>
