--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 		<div class="addthis_sharing_toolbox"></div>
 		
 		<!-- begin text -->
-		<div class="bat_story">
-			<p>You wanna know how I got them? So I had a wife. She was beautiful, like you, who tells me I worry too much, who tells me I ought to smile more, who gambles and gets in deep with the sharks. Hey. One day they carve her face. And we have no money for surgeries. She can't take it. I just wanna see her smile again. I just want her to know that I don't care about the scars. So, I do this to myself. And you know what? She can't stand the sight of me. She leaves. Now I see the funny side. Now I'm always smiling.</p>
+		<div class="bat_story bat_story_full">
+			<p class="bat_first">This is a full width the class bat_story_full. You wanna know how I got them? So I had a wife. She was beautiful, like you, who tells me I worry too much, who tells me I ought to smile more, who gambles and gets in deep with the sharks. Hey. One day they carve her face. And we have no money for surgeries. She can't take it. I just wanna see her smile again. I just want her to know that I don't care about the scars. So, I do this to myself. And you know what? She can't stand the sight of me. She leaves. Now I see the funny side. Now I'm always smiling.</p>
 			<p>Ooh, you think darkness is your ally? You merely adopted the dark, I was born in it. Molded by it. I didn't see the light until I was already a man. By then there was nothing to be but blinded.</p>
 		</div><!-- /.bat_story -->
 		
@@ -329,6 +329,15 @@
 			<!--<img src="https://raw.githubusercontent.com/robertdenton/bruce/gh-pages/media/media_1.JPG" width="100%">-->
 		</figure>
 	</div><!-- /.bat_full -->
+	
+	<hr class="bat_break">
+	
+	<footer>
+		<div id="bd_press">
+			<p><span>The Register-Guard <span>•</span></span> <span><a href="http://g.co/maps/h6sgk">3500 Chad Drive</a> • Eugene, OR • 97408 <span>/</span></span> <span>(541) 485-1234 <span>/</span> <a href="mailto:feedback@registerguard.com">Feedback</a></span></p>
+			<p><span>Copyright © 1996–2014 <span>/</span></span> <span><a href="http://projects.registerguard.com/pages/terms-of-use/">Terms</a> <span>/</span> <a href="http://projects.registerguard.com/pages/privacy-statement/">Privacy</a> <span>/</span> <a href="http://projects.registerguard.com/pages/copyright/">Copyright</a></span></p>
+		</div>
+	</footer>
 
 	<!-- jquery -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
