--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -134,7 +134,7 @@
 		<figure>
 			<img src="media/media_1.JPG" width="100%">
 		</figure>
-		<figcaption>
+		<figcaption class="bat_inset">
 			Caption.
 		</figcaption>
 	</div><!-- /.bat_full -->
